@@ -21,6 +21,7 @@
 
 #include "ui_inputurl.h"
 #include <QDialog>
+#include "config.h"
 
 class InputURL : public QDialog, public Ui::InputURL
 {
@@ -30,9 +31,14 @@ public:
 	InputURL( QWidget* parent = 0, Qt::WindowFlags f = 0 );
 	~InputURL();
 
+#if AUTO_PLAYLIST
+	void setURL(QString url);
+#else
 	void setURL(QString url, bool is_playlist);
+#endif
 	QString url();
 
+#if !AUTO_PLAYLIST
 	void setPlaylist(bool b);
 	bool isPlaylist();
 
@@ -40,6 +46,7 @@ protected slots:
 	void indexChanged(int);
 	void textChanged(const QString &);
 	void playlistChanged(int);
+#endif
 };
 
 #endif
